Some UI tweaks - faster UI theming, vertical align top to prevent movement of content during sections transition

--- a/chipper/webroot/css/style.css
+++ b/chipper/webroot/css/style.css
@@ -306,6 +306,8 @@ input[type='radio']:disabled:after {
   width: 100%;
   display: flex;
   justify-content: center;
+  height: 100vh; /* Keeps things at the top*/
+  align-items: start;
 }
 
 .main-nav-parent {
